Add paint-on-hover and reset button functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1 class="title">Etch-A-Sketch</h1>
+    <button class="reset" id="reset-button">Reset</button>
     <div id="container"></div>
   </body>
 </html>
