--- a/index.html
+++ b/index.html
@@ -4,13 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Etch-A-Sketch!</title>
+    <!-- google fonts: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rampart+One&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- css / JS: -->
     <link rel="stylesheet" href="./style.css" />
     <script src="./script.js" defer></script>
+    <title>Virtual Sketch!</title>
   </head>
   <body>
-    <h1 class="title">Etch-A-Sketch</h1>
-    <button class="reset" id="reset-button">Reset</button>
-    <div id="container"></div>
+    <video playsinline autoplay muted loop poster="cake.jpg">
+      <source src="/Nature - 111308.mp4" type="video/webm" />
+      Your browser does not support the video tag.
+    </video>
+    <div id="content">
+      <h1 class="title">// Virtual Sketch \\</h1>
+      <div id="settings">
+        <div>
+          Choose color:
+          <input type="color" id="colorWheel" value="#000000" />
+        </div>
+        <button class="reset" id="reset-button">Reset</button>
+      </div>
+      <div id="container"></div>
+    </div>
   </body>
 </html>
