--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <video playsinline autoplay muted loop poster="cake.jpg">
-      <source src="/Nature - 111308.mp4" type="video/webm" />
+      <source src="./Nature - 111308.mp4" type="video/webm" />
       Your browser does not support the video tag.
     </video>
     <div id="content">
