Add canvas size functionality; refactor/improve design

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       <div id="container">
         <table class="grid"></table>
       </div>
+      <h2>Canvas Size:</h2>
+      <div id="size-settings">
+        <div id="small">small</div>
+        <div id="med">medium</div>
+        <div id="large">large</div>
+      </div>
     </div>
   </body>
 </html>
